@@ -17,6 +17,8 @@ Month day, 2005 - 3.6.2
 * [Herve Drolon] fixed a memory leak with loading of exif JPEG images
 * [Detlev Vendt] changed some 'pointer-to-int' casts to 'pointer-to-long' for 64bit machines
 * [Ryan Rubley] fixed a memory leak in the multipage API
++ [Ryan Rubley] added FreeImage_ColorQuantizeEx
++ [Ryan Rubley] added FIMD_ANIMATION and FIDT_PALETTE
 
 February 20, 2005 - 3.6.1
 * [Ryan Rubley] fixed a memory leak in the metadata API
